--- a/lab2/style.css
+++ b/lab2/style.css
@@ -1,18 +1,31 @@
-a{text-decoration: none;}
 
+a{text-decoration: none;}
 nav{
-    width:700px;
-    height:40px;
+ 
+    width:1200px;
+    height:10px;
     display: flex;
-    justify-content: space-between;
-   background-color: aqua;
-   font-size:30px;
-   padding: 30px;
+    margin-right: 100;
+    background-color: burlywood;
+   font-size:20px;
+   padding: 25px;
+}
+nav a{
+    margin-right: 35px;
+}
+#about{
+    background-color: aqua;
+}
+#liked_Things{
+    background-color: aqua;
+}
+#disliked_things{
+    background-color: aqua;
+}
+#Report{
+    background-color: aqua;
 }
 h1{
     color:red;
 }
 
-.navItem{
-    color:black;
-}
